Committing v0.1 release code

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,7 +28,7 @@
         <h:head>
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <title>Jurjens Resource Based Economy System</title>
+                <title>Jurjens Resource Based Economy System v0.1 BETA</title>
             </f:facet>
         </h:head>
 
@@ -38,6 +38,7 @@
             
             <script>
                 $("#chart").height($(window).height() - 200);
+                $("#chart").width($(window).width() - 50);
             </script>
 
         </h:body>
