The source of the first version of the JRBE system. (0.1 alpha)

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,5 +1,5 @@
 <!--*
- * Copyright (C) 2014 Alexander Jurjens
+ * Copyright (C) 2015 Alexander Jurjens
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -28,7 +28,7 @@
         <h:head>
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
-                <title>Jurjens Resource Based Economy System v0.1 BETA</title>
+                <title>Jurjens Resource Based Economy System v0.1 ALPHA</title>
             </f:facet>
         </h:head>
 
